[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/char1.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/punch_01.wav" type="Sample" id=2]
[ext_resource path="res://assets/sprites/sprites_char1.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 60.9208, 67.7822 )

[sub_resource type="SampleLibrary" id=2]

samples/punch_01 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 2 )
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.5 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "recovered_hit"
} ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=5]

length = 0.7
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 7, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("offensive_hitbox_area:monitoring")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.15 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0.7 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_hit"
} ]
}

[sub_resource type="Animation" id=6]

length = 1.4
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1.2, 1.4 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 1.4 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "get_up"
} ]
}

[sub_resource type="Animation" id=7]

resource/name = "knock_up"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=8]

length = 1.4
loop = false
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 1.4 ),
"transitions": FloatArray( 1 ),
"values": [ {
"args": [  ],
"method": "dead"
} ]
}

[sub_resource type="Animation" id=9]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="Animation" id=10]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.25, 0.5, 0.75 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5, 4 ]
}

[sub_resource type="RectangleShape2D" id=11]

custom_solver_bias = 0.0
extents = Vector2( 74.4054, 74.7319 )

[sub_resource type="RectangleShape2D" id=12]

custom_solver_bias = 0.0
extents = Vector2( 90.7518, 25.2982 )

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 85.463, 53.6288 )

[node name="char1" type="KinematicBody2D" groups=[
"simple_enemy",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -24.8428, 30.379 )
shapes/0/trigger = false
collision/layers = 8
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
walk_speed = 100
max_hp = 5
_score = 50
_ia = "basic"
_knock_down_resist = 0

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="sprite" type="Sprite" parent="."]

texture = ExtResource( 3 )
vframes = 4
hframes = 3
frame = 10

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/being_hit = SubResource( 3 )
anims/down = SubResource( 4 )
anims/hit = SubResource( 5 )
anims/knock_down = SubResource( 6 )
anims/knock_up = SubResource( 7 )
anims/ko = SubResource( 8 )
anims/stand = SubResource( 9 )
anims/walk = SubResource( 10 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="defensive_hitbox_area" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
input/pickable = true
shapes/0/shape = SubResource( 11 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -68.9983, 33.1202 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
monitorable = false
collision/layers = 4096
collision/mask = 2048

[node name="defensive_hitbox_collision" type="CollisionShape2D" parent="defensive_hitbox_area"]

transform/pos = Vector2( -68.9983, 33.1202 )
shape = SubResource( 11 )
trigger = false
_update_shape_index = 0

[node name="offensive_hitbox_area" type="Area2D" parent="."]

editor/display_folded = true
visibility/visible = false
transform/pos = Vector2( -55.0639, 53.737 )
input/pickable = true
shapes/0/shape = SubResource( 12 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
monitoring = false
collision/layers = 8192
collision/mask = 1024

[node name="offensive_hitbox_collision" type="CollisionShape2D" parent="offensive_hitbox_area"]

shape = SubResource( 12 )
trigger = false
_update_shape_index = 0

[node name="world_collision" type="CollisionShape2D" parent="."]

visibility/visible = false
transform/pos = Vector2( -24.8428, 30.379 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="offensive_unfriendly_hitbox_area" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 13 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 43.2134, 1.10803 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2048
collision/mask = 4096

[node name="collision" type="CollisionShape2D" parent="offensive_unfriendly_hitbox_area"]

transform/pos = Vector2( 43.2134, 1.10803 )
shape = SubResource( 13 )
trigger = false
_update_shape_index = 0

[connection signal="area_enter" from="defensive_hitbox_area" to="." method="_on_defensive_hitbox_area_area_enter"]

[connection signal="area_enter" from="offensive_hitbox_area" to="." method="_on_offensive_hitbox_area_area_enter"]

[connection signal="area_enter" from="offensive_unfriendly_hitbox_area" to="." method="_on_offensive_unfriendly_hitbox_area_area_enter"]


